--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react-calendar": "^3.4.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "styled-components": "^5.3.1",
-    "swiper": "^7.0.5"
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@types/node": "^16.9.0",
