--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next-images": "^1.8.1",
     "react": "17.0.2",
     "react-animations": "^1.0.0",
+    "react-burger-menu": "^3.0.6",
     "react-calendar": "^3.4.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
@@ -23,6 +24,7 @@
     "@types/node": "^16.9.0",
     "@types/react": "^17.0.20",
     "@types/react-animations": "^1.0.0",
+    "@types/react-burger-menu": "^2.8.1",
     "@types/styled-components": "^5.1.14",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-styled-components": "^1.13.2",
