--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@svgr/webpack": "^5.5.0",
+    "gsap": "^3.7.1",
     "next": "11.1.2",
     "next-images": "^1.8.1",
     "react": "17.0.2",
